[package]
name = "winext"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32-v2 = "0.0.5"
env_logger = "0.11.9"
ext4-lwext4 = { version = "0.1.2", features = ["gpl"]}
ext4-lwext4-sys = "0.1.2"
libc = "0.2.183"
log = "0.4.29"
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem"] }
winfsp = { version = "0.12.4", features = ["debug", "system", "full", "windows-62", "handle-util"] }

[build-dependencies]
winfsp = "0.12.4"
