[package]
name = "winext"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32-v2 = "0.0.5"
env_logger = "0.11.9"
ext4_rs = "1.3.3"
log = "0.4.29"
windows = { version = "0.62.2", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl"
] }
winfsp = { version = "0.12.4", features = ["debug", "system", "full", "windows-62", "handle-util"] }

[build-dependencies]
winfsp = "0.12.4"

[patch.crates-io]
ext4_rs = { path = "patches/ext4_rs" }
